--- a/Codelabs/css/ex1.css
+++ b/Codelabs/css/ex1.css
@@ -1,4 +1,12 @@
-.p{
-    color: red;
-    background-color: blue;
+h1{
+    font-family: Comic Sans MS;
+    color: rgb(24, 190, 135);
+}
+p{
+    color: rgb(56, 56, 56);
+    font-family: Comic Sans MS;
+    border: 3px solid rgb(24, 190, 135);
+    border-radius: 15px;
+    padding: 2vh;
+    width: 50vh;
 }
