--- a/Codelabs/css/ex3.css
+++ b/Codelabs/css/ex3.css
@@ -5,22 +5,22 @@
     padding: 0;
     margin: 0;
 }
-h1{
-    font-size: 80px;
+.header_meu_batman{
     background-color: black;
     text-align: center;
-    width: 100%;
+    font-size: 50px;
+    width: 100vw;
+}
+.header_meu_batman h1{
     font-family: "Bungee Spice", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
-h1:hover{
-    font-size: 90px;
-    transition: 0.3s;
-}
+
+
+
 /* colunas - inicio */
-.conteudo_site{
-    max-width: 1200px;
+.primeira_parte_meu_batman{
     margin: 5vh auto 0 auto ;
     display: flex;
     flex-direction:row;
@@ -60,11 +60,11 @@ p{
     justify-content: space-between;
 }
 .suits-batman{
-    width: 200px;    
+    width: 12vw;    
     height:min-content;
 }
 .figure_suits:hover .suits-batman{
-    width: 250px;
+    width: 15vw;
     transition: 0.2s;
 }
 .figure_suits:hover .nome_suit{
@@ -91,6 +91,21 @@ p{
     margin-bottom: 2vh;
 }
 
+
+@media only screen and (min-width: 1024px) {
+    .primeira_parte_meu_batman{
+        background-color: blueviolet;
+    }
+    body{
+        background-color: blue;
+    }
+}
+
+@media only screen and (max-width: 760px) {
+    body{
+        background-color: red;
+    }
+}
 /* itens do batman - inicio */
 
 
